--- a/src/web/templates/topic/index.html.eex
+++ b/src/web/templates/topic/index.html.eex
@@ -6,9 +6,7 @@
         <%= topic.title %>
         <div class="right">
           <%= link "Edit", to: topic_path(@conn, :edit, topic) %>
-          <%= link(to: topic_path(@conn, :delete, topic), method: :delete, data: [confirm: "Are you sure?"]) do %>
-            <i class="material-icons">delete</i>
-          <% end %>
+          <%= link "Delete", to: topic_path(@conn, :delete, topic), method: :delete %>
         </div>
     </li>
   <% end %>
