--- a/src/web/templates/topic/index.html.eex
+++ b/src/web/templates/topic/index.html.eex
@@ -2,12 +2,17 @@
 
 <ul class="collection">
   <%= for topic <- @topics do %>
-    <li class="collection-item">
+    <li class="collection-item container-flex">
+      <h6>
         <%= topic.title %>
-        <div class="right">
-          <%= link "Edit", to: topic_path(@conn, :edit, topic) %>
-          <%= link "Delete", to: topic_path(@conn, :delete, topic), method: :delete %>
-        </div>
+      </h6>
+      <div class="right secondary-item">
+        <%# Weird bug with :delete method JS not w  orking for link, so using button instead
+        <%# <%= link "Edit", to: topic_path(@conn, :edit, topic) %>
+        <%# <%= link "Delete", method: :delete, to: topic_path(@conn, :delete, topic) %>
+        <%= button "Edit", to: topic_path(@conn, :edit, topic), method: :get, class: "waves-effect waves-teal btn-flat light-blue-text text-darken-1 button" %>
+        <%= button "Delete", method: :delete, to: topic_path(@conn, :delete, topic), class: "waves-effect waves-teal btn-flat light-blue-text text-darken-1 button" %>
+      </div>
     </li>
   <% end %>
 </ul>
